fix(experiment section): fixed spacing

--- a/src/_mobile.scss
+++ b/src/_mobile.scss
@@ -62,7 +62,7 @@
         }
     }
     .section.experiment {
-        grid-row: span 18;
+        grid-row: span 20;
         .titled-paragraph {
             grid-column: 2/12;
             grid-row: span 8;
@@ -73,76 +73,76 @@
         }
         img:nth-of-type(1) {
             grid-column: 1/3;
-            grid-row: 10;
+            grid-row: 11;
         }
         img:nth-of-type(2) {
             grid-column: 3/6;
-            grid-row: 11;
+            grid-row: 12;
         }
         img:nth-of-type(3) {
             grid-column: 1/4;
-            grid-row: 12;
+            grid-row: 13;
             z-index: -1;
         }
         img:nth-of-type(4) {
             grid-column: 4/8;
-            grid-row: 10;
+            grid-row: 11;
             z-index: -1;
         }
         img:nth-of-type(5) {
             grid-column: -7/-3;
-            grid-row: 12;
+            grid-row: 13;
         }
         img:nth-of-type(6) {
             grid-column: 1/2;
-            grid-row: 9;
+            grid-row: 10;
             z-index: -1;
         }
         img:nth-of-type(7) {
             grid-column: -10/-8;
-            grid-row: 13;
+            grid-row: 14;
         }
         img:nth-of-type(8) {
             grid-column: -12/-9;
-            grid-row: 14;
+            grid-row: 15;
             z-index: -1;
         }
         img:nth-of-type(9) {
             grid-column: -8/-4;
-            grid-row: 14;
+            grid-row: 15;
         }
         img:nth-of-type(10) {
             grid-column: -5/-2;
-            grid-row: 11;
+            grid-row: 12;
         }
         img:nth-of-type(11){
             grid-column: -10/-8;
-            grid-row: 16;
+            grid-row: 17;
         }
         img:nth-of-type(12){
             grid-column: -5/-1;
-            grid-row: 15;
+            grid-row: 16;
             z-index: -1;
         }
         img:nth-of-type(13){
             grid-column: -4/-1;
-            grid-row: 13;
+            grid-row: 14;
         }
         img:nth-of-type(14){
             grid-column: -7/-5;
-            grid-row: 17;
+            grid-row: 18;
         }
         img:nth-of-type(15){
             grid-column: -4/-3;
-            grid-row: 18;
+            grid-row: 19;
         }
         img:nth-of-type(16){
             grid-column: -5/-4;
-            grid-row: 10;
+            grid-row: 11;
         }
         img:nth-of-type(17){
             grid-column: -3/-1;
-            grid-row: 17;
+            grid-row: 18;
         }
     }
 }
